--- a/site.cabal
+++ b/site.cabal
@@ -13,16 +13,8 @@ executable site
                   , containers >= 0.5
                   , pandoc-citeproc >= 0.14
                   , tardis
+                  , directory
+                  , filepath
+                  , process
   ghc-options:      -threaded
   default-language: Haskell2010
-
-test-suite site-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , doctest
-                     , QuickCheck >= 2.9
-                     , lens
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
